--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
  background-color: hsl(149, 26%, 73%);
-    padding: 50px 0;
+    padding: 1px;
 }
 
 .nav navbar navbar-inverse navbar-fixed-top navbar-right{
