--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     color:#1E90FF;
     border-radius:1px;
 }
-
+navbar-brand {
+    float: left;
+    font-size: 18px;
+    height: 10px;
+    line-height: 2px;
+    padding: 2px;
+}
 .Home_text{
   font-size: 23px;
   text-align: center;
