--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ h6{
 }
 </style>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom navbar-brand">
     <div class="container">
      
       <!--navlogo-->
