--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </script>
 </div> 
 </center></div>
-     <div><center><h6>Designed and programmed by Xavier Toussaint Feb2017<h6></center></div>
+     <div><center><h6>Programmed by Xavier Toussaint<h6></center></div>
        </div>
        </body>
   
