--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     
 <div class="row">
     <ul>
-      <li>Digital Marketing Experience: PPC/SEM/SEO/Content experience, Across Multiple Platforms, Understand third party ad serving platforms, and have conttent creation experience</li>
-      <li>Software Development Experience: C#, SQL, HTML, Javascript, CSS, Angular, JSON, PHP, Python, and R Frameworks experience .Net/ASP, Angular, Training to be full stack</li>
+      <li>Digital Marketing Experience: PPC/SEM/SEO/Content experience</li>
+      <li>Software Development Experience: C#, Azure, .Net/ASP and Full Stack Experience</li>
       <li>Data Science: Tableau, R, python, SQL, Machine Learning, architecture, regression models, forecasting</li>
       <li>Front End Development Certfication: Free Code Camp</li>
       <li>Google Analytics Certifiction</li>
