--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <!--Fonts above, code is below-->
 
 <body id="body">
-
-
-
+<!--Nav classes-->
 <nav >
 <a href="#Home" class="nav-item navtext">Home</a></li>
         <a href="#about" class="nav-item navtext">About</a>
@@ -34,8 +32,9 @@
 <div>
 <div id="Home" class="bigphoto">
 <div id="picwrapper">
-<div class="wrappertext">Initiative. Innovation.</div> 
+<div class="wrappertext">Welcome.</div> 
 <div>
+        <!--Scroll Down button Javascript-->
 <section>
 <a href="#about" class="scroll-down" address="true"></a>
 </section>
@@ -52,14 +51,15 @@
          </div>
          </div>
   <div>
-
+<!--This is the About page-->
     <h1 id="about">Hello, I am Xavier Toussaint</h1>
-    
+    <!--Three Images-->
 <img src="https://image.ibb.co/hxZmwa/IMG_1317.jpg" alt="A photo of Xavier" style="width:350px; height: 350px;"> 
 <img src="https://image.ibb.co/nFSEGa/SOundcloud.jpg" alt="SOundcloud" border="0" style="width:350px; height: 350px;"> 
 <img src="https://i.imgur.com/AwuvYqn.png" alt="G0047940" style="width:350px; height: 350px;">
 </div>
 <div>
+        <!--Paragraphs about me-->
     <h2>"If you believe your work is valid, then what you do is important" -Anonymous</h2>
 
     <p>My experience is providing the very best information to the people that need it the most: clients, audience, and teammates. I stress all three because being able to navigate between the three is vital. We aren’t just robots pushing buttons. We are people providing services to better the lives around us. </p>
