--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
 
     <p>My experience is providing the very best information to the people that need it the most: clients, audience, and teammates. I stress all three because being able to navigate between the three is vital. We aren’t just robots pushing buttons. We are people providing services to better the lives around us. </p>
 
-    <p>To that end, Data is the future. Understanding how to interpret, use, and deploy data is a skill I posesses. I love information sciences. I am comfortbale in the areas of software devlopment, data science, and digital marketing. Whether it is visualizing data with Tableau, utilizing my C#, SQL, python skills, machine learning, or using my digital marketing experience, I undertand how to add value to any industry, business, and company.</p> 
+    <p>To that end, Data is the future. Understanding how to interpret, use, and deploy data is a must have for any company. I love information sciences. I am comfortable in the areas of software development, data science, and digital marketing. Whether it is visualizing data with Tableau, utilizing my C#, SQL, Python skills, machine learning, or using my digital marketing experience, I understand how to add value to any industry, business, and company.</p> 
 
-    <p>Outside of work related things I love being well rounded. I love to cook, skate, excercise, travel, read, go to concerts, hike, electronics, and woodwork. I always like to stay up to date with industry related trends, learn new skills, and be a student of life because every day is a chance to better ourselves and become a functional citizen of the globe. </p> 
-    
+    <p>Outside of work related things I love being well rounded. I love to cook, skate, exercise, travel, read, go to concerts, hike, electronics, and woodwork. I always like to stay up to date with industry related trends, learn new skills, and be a student of life because every day is a chance to better ourselves and become a functional citizen of the globe. </p> 
     </div>
     
         </div>
