--- a/index.html
+++ b/index.html
@@ -54,19 +54,15 @@
 <!--This is the About page-->
     <h1 id="about">Hello, I am Xavier Toussaint</h1>
     <!--Three Images-->
-<img src="https://image.ibb.co/hxZmwa/IMG_1317.jpg" alt="A photo of Xavier" style="width:350px; height: 350px;"> 
-<img src="https://image.ibb.co/nFSEGa/SOundcloud.jpg" alt="SOundcloud" border="0" style="width:350px; height: 350px;"> 
+ 
 <img src="https://i.imgur.com/AwuvYqn.png" alt="G0047940" style="width:350px; height: 350px;">
 </div>
 <div>
         <!--Paragraphs about me-->
     <h2>"If you believe your work is valid, then what you do is important" -Anonymous</h2>
 
-    <p>My experience is providing the very best information to the people that need it the most: clients, audience, and teammates. I stress all three because being able to navigate between the three is vital. We aren’t just robots pushing buttons. We are people providing services to better the lives around us. </p>
+    <p>My experience is providing the very best information to the people that need it the most. I believe in the combination of various disciplines to create a world that is more informed and ready to take on a challenging tomorrow. </p>
 
-    <p>To that end, Data is the future. Understanding how to interpret, use, and deploy data is a must have for any company. I love information sciences. I am comfortable in the areas of software development, data science, and digital marketing. Whether it is visualizing data with Tableau, utilizing my C#, SQL, Python skills, machine learning, or using my digital marketing experience, I understand how to add value to any industry, business, and company.</p> 
-
-    <p>Outside of work related things I love being well rounded. I love to cook, skate, exercise, travel, read, go to concerts, hike, electronics, and woodwork. I always like to stay up to date with industry related trends, learn new skills, and be a student of life because every day is a chance to better ourselves and become a functional citizen of the globe. </p> 
     </div>
     
         </div>
