--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1 id="about">Hello, I am Xavier Toussaint</h1>
     <!--Three Images-->
  
-<img src="https://i.imgur.com/AwuvYqn.png" alt="G0047940" class="center">
+<img src="https://ibb.co/HYy0cmv" alt="G0047947">
 </div>
 <div>
         <!--Paragraphs about me-->
