--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <h1 id="about">Hello, I am Xavier Toussaint</h1>
     <!--Three Images-->
  
-<img src="https://ibb.co/HYy0cmv" alt="G0047947">
+<img src="https://i.ibb.co/bLVx4ph/190417-adi-Village-Portrait-00324.jpg" alt="190417-adi-Village-Portrait-00324" border="0">
+          
 </div>
 <div>
         <!--Paragraphs about me-->
