--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     <h1 id="about">Hello, I am Xavier Toussaint</h1>
     <!--Three Images-->
  
-<img src="https://ibb.co/HYy0cmv" alt="190417-adi-Village-Portrait-00324" class="image-wrapper">
+<img src="https://ibb.co/HYy0cmv" alt="190417-adi-Village-Portrait-00324">
           
 </div>
 <div>
         <!--Paragraphs about me-->
     <h2>"If you believe your work is valid, then what you do is important" -Anonymous</h2>
 
-    <p>My experience is providing the very best information to the people that need it the most. I believe in the combination of various disciplines to create a world that is more informed and ready to take on a challenging tomorrow. </p>
+    <p>My current ambission is to provide the very best information to the people that need it the most. Through my varied skillset I believe I can help mold a world that is more informed and ready to take on a challenging tomorrow. </p>
 
     </div>
     
