--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
     <h2>"If you believe your work is valid, then what you do is important" -Anonymous</h2>
 
     <p>My current ambission is to provide the very best information to the people that need it the most. Through my varied skillset I believe I can help mold a world that is more informed and ready to take on a challenging tomorrow. </p>
-
+<ul>
+        <li>Companies Worked For OR Did Work For</li>
+        <li>Apple</li>
+        <li>Adidas</li>
+        <li>CBS</>
+        <li>iHeartMedia</>
+        <li>Univision</li>
+    </ul>
+ 
     </div>
     
         </div>
@@ -77,6 +85,7 @@
     
 <div class="row">
     <ul>
+      <li>Voice of Consumer, Social Listening and Brand Analytics Expert</li>
       <li>Digital Marketing Experience: PPC/SEM/SEO/Content experience</li>
       <li>Software Development Experience: C#, Azure, .Net/ASP and Full Stack Experience</li>
       <li>Data Science: Tableau, R, python, SQL, Machine Learning, architecture, regression models, forecasting</li>
