--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <li>Companies Worked For OR Did Work For</li>
         <li>Apple</li>
         <li>Adidas</li>
-        <li>CBS</>
-        <li>iHeartMedia</>
+        <li>CBS</li>
+        <li>iHeartMedia</li>
         <li>Univision</li>
     </ul>
  
